--- a/Frontend/demo/src/Components/Styles.css
+++ b/Frontend/demo/src/Components/Styles.css
@@ -116,6 +116,20 @@ a{
     }
 
 }
+/*nav*/
+.nav{
+    width: 100%;
+    background: #FAF3E0;
+    color: black;
+    padding: 3px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 10;
+}
 
 /*materials*/
 
