--- a/Frontend/demo/src/Components/Styles.css
+++ b/Frontend/demo/src/Components/Styles.css
@@ -117,7 +117,7 @@ a{
 
 }
 /*nav*/
-.nav{
+nav{
     width: 100%;
     background: #FAF3E0;
     color: black;
@@ -131,6 +131,117 @@ a{
     z-index: 10;
 }
 
+.logo{
+    width: 100px;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 3px 30px;
+    font-size: 19.5px;
+    cursor: pointer;
+    font-weight: 600;
+
+}
+nav ul li a:hover,
+nav ul li a:focus,
+nav ul li a:active {
+   
+   border-bottom: 0.2rem solid #f2b91d;
+   padding: 0.5rem 0;
+    
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    gap: 5px;
+}
+.hamburger span {
+    width: 25px;
+    height: 3px;
+    background: black;
+    border-radius: 3px;
+    transition: transform 0.3s ease;
+  }
+.container-nav{
+    padding-left: 3%;
+    padding-right: 5%;
+}
+.close-btn{
+    display: none;
+    background: none;
+    border: none;
+    color: black;
+    font-size:  24px;
+    font-weight: bold;
+    text-align: left;
+    cursor: pointer;
+    margin: 0 20px 10px auto;
+}
+.closebtn:hover {
+    color: #f2b91d;
+}
+
+@media(max-width: 768px){
+    .hamburger {
+        display: flex; 
+      }
+    
+      nav ul {
+        display: none; 
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: #FAF3E0;
+        padding: 10px 0;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+    
+      nav ul.nav-active {
+        display: flex; 
+      }
+    
+      nav ul li {
+        margin: 10px 0;
+        text-align: center;
+      }
+      .closebtn {
+          display: block; 
+      }
+  
+}
+@media(max-width: 480px){
+    .logo {
+        width: 80px; 
+      }
+    
+      nav ul li {
+        font-size: 16px; 
+        margin: 8px 0;
+      }
+    
+      .hamburger {
+        display: flex; 
+      }
+    
+      .hamburger span {
+        width: 20px; 
+      }
+    
+      nav ul {
+        top: 50px; 
+        padding: 8px 0;
+      }
+      .closebtn {
+          font-size: 20px; 
+          margin: 0 10px 10px auto; 
+      }
+  
+}
 /*materials*/
 
 .btn1{
